# intel-gpu-tools

./: configure.ac
assembler/: Makefile.am  gen_asm_assembler.c  gen_asm_assembler.h  test.js  test.sh
benchmarks/: gem_exec_delay.c  meson.build
include/drm-uapi/: amdgpu_drm.h  drm.h  i915_drm.h
lib/: Makefile.am  Makefile.sources  gen10_render.h  i915-perf.pc.in  i915_pciids.h  igt_perf.h  igt_syncobj.c  igt_syncobj.h  intel_batchbuffer.c  intel_chipset.h  intel_device_info.c  intel_reg.h  meson.build  rendercopy.h  rendercopy_gen10.c
lib/i915/: gem_engine_topology.c  gem_engine_topology.h  perf.c  perf.h  perf_data.h  perf_data_reader.c  perf_data_reader.h
lib/i915/perf-configs/: guids.xml  mdapi-xml-convert.py  oa-bdw.xml  oa-bxt.xml  oa-cflgt2.xml  oa-cflgt3.xml  oa-chv.xml  oa-cnl.xml  oa-glk.xml  oa-icl.xml  oa-kblgt2.xml  oa-kblgt3.xml  oa-lkf.xml  oa-sklgt2.xml  oa-sklgt3.xml  oa-sklgt4.xml  oa-tgl.xml  perf-codegen.py  update-guids.py
tests/: Makefile.sources  ctx_rpcs.c  gem_ctx_isolation.c  gem_ctx_param.c  gem_ctx_sseu.c  gem_exec_parse.c  i915_query.c  kms_atomic.c  meson.build  perf.c  pm_sseu.c  query.c  query_info.c  syncobj_timeline.c  syncobj_wait.c
tests/i915/: gem_exec_fence.c  i915_query.c
tools/: Makefile.am  aubdump.c  intel_aubdump.in  meson.build
tools/i915-perf/: i915_perf_configs.c  i915_perf_reader.c  i915_perf_recorder.c  meson.build
